--- a/FinalProject/app/src/main/res/layout/activity_main.xml
+++ b/FinalProject/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,11 @@
         android:layout_height="match_parent" />
 
     <FrameLayout
+        android:id="@+id/fight"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <FrameLayout
         android:id="@+id/map"
         android:name="com.example.finalproject.Map"
         android:layout_width="match_parent"
