--- a/FinalProject/app/src/main/res/layout/fragment_item_characteristics.xml
+++ b/FinalProject/app/src/main/res/layout/fragment_item_characteristics.xml
@@ -39,7 +39,7 @@
         app:layout_constraintTop_toBottomOf="@+id/category" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/name_field"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -54,7 +54,7 @@
         android:layout_marginStart="8dp"
         android:text="TextView"
         app:layout_constraintStart_toEndOf="@+id/category"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        app:layout_constraintTop_toBottomOf="@+id/name_field" />
 
     <TextView
         android:id="@+id/textView8"
