--- a/FinalProject/app/src/main/res/layout/fragment_fight.xml
+++ b/FinalProject/app/src/main/res/layout/fragment_fight.xml
@@ -5,34 +5,34 @@
     android:id="@+id/frameLayout3"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fight">
+    tools:context=".FightFragment">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/cast_spell"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="cast spell"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/button3"
+        app:layout_constraintEnd_toStartOf="@id/attack"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/defend"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="defend"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/run"
-        app:layout_constraintStart_toEndOf="@id/button3" />
+        app:layout_constraintStart_toEndOf="@id/attack" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/attack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="attack"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button2"
-        app:layout_constraintStart_toEndOf="@+id/button" />
+        app:layout_constraintEnd_toStartOf="@+id/defend"
+        app:layout_constraintStart_toEndOf="@+id/cast_spell" />
 
     <Button
         android:id="@+id/run"
@@ -41,7 +41,7 @@
         android:text="run"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button2" />
+        app:layout_constraintStart_toEndOf="@+id/defend" />
 
     <ImageView
         android:id="@+id/player"
@@ -60,47 +60,47 @@
         tools:src="@tools:sample/avatars" />
 
     <ProgressBar
-        android:id="@+id/progressBar"
+        android:id="@+id/your_health"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="wrap_content"
         android:layout_height="25dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/progressBar2"
+        app:layout_constraintBottom_toTopOf="@+id/your_mana"
         app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/player" />
 
     <ProgressBar
-        android:id="@+id/progressBar2"
+        android:id="@+id/your_mana"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="wrap_content"
         android:layout_height="25dp"
         android:layout_marginStart="8dp"
         app:layout_constraintStart_toEndOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/progressBar" />
+        app:layout_constraintTop_toBottomOf="@+id/your_health" />
 
     <ProgressBar
-        android:id="@+id/progressBar3"
+        android:id="@+id/enemy_health"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="0dp"
         android:layout_height="25dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/progressBar4"
+        app:layout_constraintBottom_toTopOf="@+id/enemy_mana"
         app:layout_constraintEnd_toStartOf="@+id/textView4"
         app:layout_constraintTop_toBottomOf="@id/enemy"
         app:layout_constraintVertical_bias="1.0" />
 
     <ProgressBar
-        android:id="@+id/progressBar4"
+        android:id="@+id/enemy_mana"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="wrap_content"
         android:layout_height="25dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toStartOf="@+id/textView5"
-        app:layout_constraintTop_toBottomOf="@+id/progressBar3" />
+        app:layout_constraintTop_toBottomOf="@+id/enemy_health" />
 
     <TextView
         android:id="@+id/textView2"
@@ -125,7 +125,7 @@
         android:id="@+id/recyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/button3"
+        app:layout_constraintBottom_toTopOf="@+id/attack"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
