--- a/FinalProject/app/src/main/res/layout/activity_main.xml
+++ b/FinalProject/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,16 @@
         android:layout_height="match_parent" />
 
     <FrameLayout
+        android:id="@+id/research_tree"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <FrameLayout
+        android:id="@+id/spells"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <FrameLayout
         android:id="@+id/map"
         android:name="com.example.finalproject.Map"
         android:layout_width="match_parent"
