--- a/FinalProject/app/src/main/res/layout/fragment_fight.xml
+++ b/FinalProject/app/src/main/res/layout/fragment_fight.xml
@@ -122,7 +122,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/avaliable_spells"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/attack"
