--- a/FinalProject/app/src/main/res/layout/fragment_research_tree.xml
+++ b/FinalProject/app/src/main/res/layout/fragment_research_tree.xml
@@ -7,8 +7,74 @@
     android:layout_height="match_parent"
     tools:context=".ResearchTree" >
 
+    <HorizontalScrollView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/back_button4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
+
+        <TableLayout
+            android:id="@+id/research_table"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/basic_spell_creation"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:text="TextView" />
+
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/fire_mage"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:text="TextView" />
+
+                <TextView
+                    android:id="@+id/water_mage"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:text="TextView" />
+
+                <TextView
+                    android:id="@+id/air_mage"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:text="TextView" />
+
+                <TextView
+                    android:id="@+id/earth_mage"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:text="TextView" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <TableRow
+                android:layout_width="150dp"
+                android:layout_height="match_parent" />
+        </TableLayout>
+    </HorizontalScrollView>
+
     <Button
-        android:id="@+id/button"
+        android:id="@+id/back_button4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="back"
