--- a/FinalProject/app/src/main/res/layout/activity_main.xml
+++ b/FinalProject/app/src/main/res/layout/activity_main.xml
@@ -46,13 +46,13 @@
     <FrameLayout
         android:id="@+id/map"
         android:name="com.example.finalproject.Map"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@+id/menu"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/status"
-        tools:layout="@layout/fragment_map"/>
+        tools:layout="@layout/fragment_map" />
 
     <FrameLayout
         android:id="@+id/status"
