--- a/FinalProject/app/src/main/res/layout/fragment_spell_characteristics.xml
+++ b/FinalProject/app/src/main/res/layout/fragment_spell_characteristics.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout6"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SpellCharacteristics" >
+    tools:context=".fragments.SpellCharacteristics" >
 
     <ImageView
         android:id="@+id/element_picture"
