--- a/FinalProject/app/src/main/res/layout/fragment_chat.xml
+++ b/FinalProject/app/src/main/res/layout/fragment_chat.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@android:color/darker_gray"
     android:alpha="1"
-    tools:context=".fragments.Chat" >
+    tools:context=".fragments.ChatFragment" >
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/chat_list"
@@ -15,7 +15,7 @@
         android:layout_marginTop="64dp"
         app:layout_constraintBottom_toTopOf="@+id/message"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
@@ -38,7 +38,15 @@
         android:layout_height="wrap_content"
         android:text="Back"
         app:layout_constraintBottom_toTopOf="@+id/chat_list"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/register"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Register"
+        app:layout_constraintBottom_toTopOf="@+id/chat_list"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
