--- a/FinalProject/app/src/main/res/layout/fragment_spells.xml
+++ b/FinalProject/app/src/main/res/layout/fragment_spells.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout5"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.Spells">
+    tools:context=".fragments.SpellsFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/spells_list"
