--- a/FinalProject/app/src/main/res/layout/fragment_chat.xml
+++ b/FinalProject/app/src/main/res/layout/fragment_chat.xml
@@ -42,10 +42,10 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/register"
+        android:id="@+id/log_out"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Register"
+        android:text="Log_out"
         app:layout_constraintBottom_toTopOf="@+id/chat_list"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
