--- a/FinalProject/app/src/main/res/layout/activity_main.xml
+++ b/FinalProject/app/src/main/res/layout/activity_main.xml
@@ -15,8 +15,8 @@
 
     <FrameLayout
         android:id="@+id/chat"
-        android:layout_width="300dp"
-        android:layout_height="500dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
