--- a/FinalProject/app/src/main/res/layout/fragment_spells.xml
+++ b/FinalProject/app/src/main/res/layout/fragment_spells.xml
@@ -27,7 +27,7 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView"
-        android:name="com.example.finalproject.SpellCharacteristics"
+        android:name="com.example.finalproject.fragments.SpellCharacteristicsFragment"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@+id/back_button2"
