--- a/FinalProject/app/src/main/res/layout/components_item.xml
+++ b/FinalProject/app/src/main/res/layout/components_item.xml
@@ -6,6 +6,8 @@
     android:layout_height="wrap_content">
 
     <TextView
+        android:textSize="20dp"
+        android:fontFamily="cursive"
         android:id="@+id/comp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
