--- a/FinalProject/app/src/main/res/layout/fragment_chat_mini.xml
+++ b/FinalProject/app/src/main/res/layout/fragment_chat_mini.xml
@@ -2,54 +2,47 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/frameLayout10"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/darker_gray"
     android:alpha="1"
-    tools:context=".fragments.ChatFragment" >
+    tools:context=".fragments.ChatMiniFragment">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:fontFamily="cursive"
         android:id="@+id/chat_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="64dp"
         app:layout_constraintBottom_toTopOf="@+id/message"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/message"
         android:fontFamily="cursive"
+        android:id="@+id/message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Enter message"
+        android:textSize="13dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:textColor="@android:color/black"/>
 
     <Button
-        android:id="@+id/back_button_chat"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Back"
         android:fontFamily="cursive"
-        app:layout_constraintBottom_toTopOf="@+id/chat_list"
+        android:id="@+id/back_button_chat"
+        android:layout_width="66dp"
+        android:layout_height="35dp"
+        android:text="Back"
+        android:textSize="11sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/log_out"
-        android:fontFamily="cursive"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Log_out"
-        app:layout_constraintBottom_toTopOf="@+id/chat_list"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
