--- a/FinalProject/app/src/main/res/layout/fragment_inventory.xml
+++ b/FinalProject/app/src/main/res/layout/fragment_inventory.xml
@@ -49,6 +49,7 @@
         app:layout_constraintTop_toBottomOf="@+id/potions_food" />
 
     <Button
+        android:fontFamily="cursive"
         android:id="@+id/back_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
