--- a/FinalProject/app/src/main/res/layout/fragment_item_characteristics.xml
+++ b/FinalProject/app/src/main/res/layout/fragment_item_characteristics.xml
@@ -15,6 +15,8 @@
         tools:src="@tools:sample/avatars" />
 
     <TextView
+        android:fontFamily="cursive"
+        android:textSize="20dp"
         android:id="@+id/name"
         android:layout_width="64dp"
         android:layout_height="wrap_content"
@@ -23,6 +25,8 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:fontFamily="cursive"
+        android:textSize="20dp"
         android:id="@+id/category"
         android:layout_width="64dp"
         android:layout_height="wrap_content"
@@ -31,6 +35,8 @@
         app:layout_constraintTop_toBottomOf="@+id/name" />
 
     <TextView
+        android:fontFamily="cursive"
+        android:textSize="20dp"
         android:id="@+id/cost"
         android:layout_width="64dp"
         android:layout_height="wrap_content"
@@ -40,6 +46,8 @@
 
     <TextView
         android:id="@+id/name_field"
+        android:fontFamily="cursive"
+        android:textSize="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -48,6 +56,8 @@
 
     <TextView
         android:id="@+id/category_field"
+        android:fontFamily="cursive"
+        android:textSize="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -56,6 +66,8 @@
 
     <TextView
         android:id="@+id/cost_field"
+        android:fontFamily="cursive"
+        android:textSize="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
