--- a/FinalProject/app/src/main/res/layout/fragment_registration.xml
+++ b/FinalProject/app/src/main/res/layout/fragment_registration.xml
@@ -8,6 +8,7 @@
     tools:context=".fragments.RegistrationFragment" >
 
     <EditText
+        android:fontFamily="cursive"
         android:id="@+id/login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -21,11 +22,12 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
+        android:fontFamily="cursive"
         android:id="@+id/password"
+        android:inputType="textPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName"
         android:text="Password"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,6 +35,7 @@
         app:layout_constraintTop_toBottomOf="@+id/login" />
 
     <Button
+        android:fontFamily="cursive"
         android:id="@+id/confirm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -43,6 +46,7 @@
         app:layout_constraintTop_toBottomOf="@+id/login" />
 
     <Button
+        android:fontFamily="cursive"
         android:id="@+id/back_button6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -53,6 +57,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
+        android:fontFamily="cursive"
         android:id="@+id/log_in"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
