--- a/FinalProject/app/src/main/res/layout/fragment_spell_characteristics.xml
+++ b/FinalProject/app/src/main/res/layout/fragment_spell_characteristics.xml
@@ -16,6 +16,8 @@
         tools:src="@tools:sample/avatars" />
 
     <TextView
+        android:fontFamily="cursive"
+        android:textSize="20dp"
         android:id="@+id/textView6"
         android:layout_width="125dp"
         android:layout_height="wrap_content"
@@ -24,6 +26,8 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:fontFamily="cursive"
+        android:textSize="20dp"
         android:id="@+id/textView7"
         android:layout_width="125dp"
         android:layout_height="wrap_content"
@@ -32,6 +36,8 @@
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <TextView
+        android:fontFamily="cursive"
+        android:textSize="20dp"
         android:id="@+id/textView8"
         android:layout_width="125dp"
         android:layout_height="wrap_content"
@@ -40,6 +46,8 @@
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
     <TextView
+        android:fontFamily="cursive"
+        android:textSize="20dp"
         android:id="@+id/textView9"
         android:layout_width="125dp"
         android:layout_height="wrap_content"
@@ -48,6 +56,8 @@
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <TextView
+        android:fontFamily="cursive"
+        android:textSize="20dp"
         android:id="@+id/textView10"
         android:layout_width="125dp"
         android:layout_height="wrap_content"
@@ -56,7 +66,9 @@
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
     <TextView
+        android:fontFamily="cursive"
         android:id="@+id/spell_name_char"
+        android:textSize="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -64,7 +76,9 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:fontFamily="cursive"
         android:id="@+id/spell_type_char"
+        android:textSize="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -72,7 +86,9 @@
         app:layout_constraintTop_toBottomOf="@+id/spell_name_char" />
 
     <TextView
+        android:fontFamily="cursive"
         android:id="@+id/spell_element_char"
+        android:textSize="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -80,7 +96,9 @@
         app:layout_constraintTop_toBottomOf="@+id/spell_type_char" />
 
     <TextView
+        android:fontFamily="cursive"
         android:id="@+id/spell_damage_char"
+        android:textSize="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -88,7 +106,9 @@
         app:layout_constraintTop_toBottomOf="@+id/spell_element_char" />
 
     <TextView
+        android:fontFamily="cursive"
         android:id="@+id/spell_mana_consumption_char"
+        android:textSize="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
