--- a/FinalProject/app/src/main/res/layout/inventory_item.xml
+++ b/FinalProject/app/src/main/res/layout/inventory_item.xml
@@ -7,6 +7,8 @@
     android:layout_height="wrap_content">
 
     <TextView
+        android:fontFamily="cursive"
+        android:textSize="20dp"
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
