--- a/FinalProject/app/src/main/res/layout/spells_item.xml
+++ b/FinalProject/app/src/main/res/layout/spells_item.xml
@@ -4,6 +4,8 @@
     android:layout_height="wrap_content">
 
     <TextView
+        android:fontFamily="cursive"
+        android:textSize="20dp"
         android:id="@+id/spell_in_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
