--- a/FinalProject/app/src/main/res/layout/fragment_chat_mini.xml
+++ b/FinalProject/app/src/main/res/layout/fragment_chat_mini.xml
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Enter message"
+        android:hint="Enter message"
         android:textSize="13dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
