--- a/FinalProject/app/src/main/res/layout/fragment_chat_mini.xml
+++ b/FinalProject/app/src/main/res/layout/fragment_chat_mini.xml
@@ -34,13 +34,11 @@
         app:layout_constraintStart_toStartOf="parent"
         android:textColor="@android:color/black"/>
 
-    <Button
-        android:fontFamily="cursive"
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/back_button_chat"
         android:layout_width="66dp"
         android:layout_height="35dp"
-        android:text="Back"
-        android:textSize="11sp"
+        app:icon="@drawable/sharp_arrow_back_black_18dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
