--- a/FinalProject/app/src/main/res/layout/fragment_spells.xml
+++ b/FinalProject/app/src/main/res/layout/fragment_spells.xml
@@ -16,7 +16,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
+        app:icon="@drawable/sharp_arrow_back_black_18dp"
         android:fontFamily="cursive"
         android:id="@+id/back_button2"
         android:layout_width="wrap_content"
