--- a/FinalProject/app/src/main/res/layout/fragment_inventory.xml
+++ b/FinalProject/app/src/main/res/layout/fragment_inventory.xml
@@ -43,6 +43,8 @@
         android:id="@+id/list"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         app:layout_constraintBottom_toTopOf="@id/characteristics"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,6 +67,7 @@
         android:name="com.example.finalproject.fragments.ItemCharacteristicsFragment"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         app:layout_constraintBottom_toTopOf="@+id/back_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
