--- a/FinalProject/app/src/main/res/layout/activity_main.xml
+++ b/FinalProject/app/src/main/res/layout/activity_main.xml
@@ -71,6 +71,7 @@
         android:name="com.example.finalproject.StatusBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
