--- a/FinalProject/app/src/main/res/layout/fragment_spell_characteristics.xml
+++ b/FinalProject/app/src/main/res/layout/fragment_spell_characteristics.xml
@@ -11,6 +11,7 @@
         android:id="@+id/element_picture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:src="@tools:sample/avatars" />
